# IdrisToAgda

./: .gitignore  .gitmodules  IdrisToAgda.cabal  LICENSE  Makefile  README.md  Setup.hs  TODO.org  agdaData.agda  agdaFunction.agda  exImpIdr.idr  idris-agda-proposal.tex  idrisData.idr  ita.bib  joinStats.py  log.txt  nicola.md  notes.md  opposition.md  overview.org  parsedExImplIdr.hs  parsedSimpleAgda.hs  parsedSimpleIdris.hs  patrik.idr  plan.md  plan2020.md  plan_2019-09-19.md  planningreport.tex  potential-ref.md  potref.txt  prevwork.md  results_idrLibs.md  simpleAgda.agda  simpleIdris.idr  simpleIdrisImpl.idr  stack.yaml  stats.csv  ttExImpIdr.hs  types.dot  univ.agda  (+4 more)
report/: 2020-01-20_comments.txt  Main.tex  halftimereport.tex  ita.bib
report/include/: Conclusion.tex  Introduction.tex  Methods.tex  Results.tex  Theory.tex
report/include/backmatter/: Appendix_1.tex  References.tex
report/include/frontmatter/: Abstract.tex  Acknowledgements.tex  Titlepage.tex
report/include/settings/: Settings.tex
src/: Main.hs  Stats.hs
toy2/: Main.hs  Toy2.cabal  stack.yaml  strange_error.txt
toy2/Agda/Interaction/Options/: IORefs.hs
toy2/Agda/Syntax/: Position.hs
toy2/Agda/Utils/: Suffix.hs
toy2/IRTS/: .#Lang.hs  CodegenAgda.hs  System.hs
toy2/Idris/: AbsSyntax.hs  AbsSyntaxTree.hs  Completion.hs  IdeMode.hs  Imports.hs  Info.hs  Parser.hs  Prover.hs  REPL.hs
toy2/Idris/Elab/: Term.hs
toy2/Idris/Parser/: Helpers.hs
toy2/Idris/REPL/: Parser.hs
toy2/output/: test2.agda  test3.agda  test4.agda  test5.agda  test7.agda
