name:            IdrisToAgda
version:         0.1
cabal-version:   1.24
license:         MIT
license-file:    LICENSE
author:          Jakob Larsson
category:        Dependent types
synopsis:        An Idris to Agda transpiler
description:
  Test

extra-source-files: README.md
                    agda/src/full/undefined.h

Data-files: Idris-dev/idrisdoc/styles.css
            Idris-dev/jsrts/jsbn/jsbn-browser.js
            Idris-dev/jsrts/jsbn/jsbn-node.js
            Idris-dev/jsrts/Runtime-common.js
            Idris-dev/jsrts/Runtime-javascript.js
            Idris-dev/jsrts/Runtime-node.js
            Idris-dev/jsrts/jsbn/LICENSE
            Idris-dev/rts/arduino/idris_main.c
            Idris-dev/rts/idris_bitstring.c
            Idris-dev/rts/idris_bitstring.h
            Idris-dev/rts/idris_gc.c
            Idris-dev/rts/idris_gc.h
            Idris-dev/rts/idris_gmp.c
            Idris-dev/rts/idris_gmp.h
            Idris-dev/rts/idris_heap.c
            Idris-dev/rts/idris_heap.h
            Idris-dev/rts/idris_main.c
            Idris-dev/rts/idris_net.c
            Idris-dev/rts/idris_net.h
            Idris-dev/rts/idris_opts.c
            Idris-dev/rts/idris_opts.h
            Idris-dev/rts/idris_rts.c
            Idris-dev/rts/idris_rts.h
            Idris-dev/rts/idris_stats.c
            Idris-dev/rts/idris_stats.h
            Idris-dev/rts/idris_stdfgn.c
            Idris-dev/rts/idris_stdfgn.h
            Idris-dev/rts/mini-gmp.c
            Idris-dev/rts/mini-gmp.h
            Idris-dev/rts/libtest.c

Extra-doc-files:  Idris-dev/CHANGELOG.md
                  Idris-dev/CITATION.md
                  Idris-dev/CONTRIBUTING.md
                  Idris-dev/CONTRIBUTORS
                  Idris-dev/README.md
                  Idris-dev/RELEASE-CHECKS.md
                  Idris-dev/idris-tutorial.pdf
                  Idris-dev/samples/effects/*.idr
                  Idris-dev/samples/misc/*.idr
                  Idris-dev/samples/misc/*.lidr
                  Idris-dev/samples/tutorial/*.idr

build-type: Custom

custom-setup
  setup-depends:
    Cabal >= 1.10 && <2.5,
    base  >= 4 && <5,
    directory,
    filepath,
    process

Library
  hs-source-dirs: Idris-dev/src
  Default-Language: Haskell2010
  ghc-prof-options: -auto-all -caf-all
  ghc-options: -funbox-strict-fields
  build-depends:  aeson >= 0.6 && < 1.5
                , annotated-wl-pprint >= 0.7 && < 0.8
                , ansi-terminal < 0.9
                , ansi-wl-pprint < 0.7
                , array >= 0.4.0.1 && < 0.6
                , async < 2.3
                , base >= 4.6 && < 5
                , base64-bytestring < 1.1
                , binary >= 0.8.4.1 && < 0.9
                , blaze-html >= 0.6.1.3 && < 0.10
                , blaze-markup >= 0.5.2.1 && < 0.9
                , bytestring >= 0.10.6.0 && < 0.11
                , cheapskate >= 0.1.1 && < 0.2
                , code-page >= 0.1 && < 0.3
                , containers >= 0.5 && < 0.7
                , data-hash >= 0.2.0.0 && < 0.3
                , deepseq >= 1.4.1.1 && < 1.5
                , directory >= 1.2.2.0 && < 1.2.3.0 || > 1.2.3.0
                , EdisonCore == 1.3.1.1 || >= 1.3.2.1 && < 1.4
                , filepath >= 1.4.0.0 && < 1.5
                , fingertree >= 0.1.4.1 && < 0.2
                , fsnotify >= 0.2 && < 2.2
                , hashable >= 1.2.1.0 && < 1.3
                , haskeline >= 0.7 && < 0.8
                , ieee754 >= 0.7.8 && < 0.9
                , megaparsec >= 7.0.4 && < 8
                , mtl >= 2.2.1 && < 2.3
                , network >= 2.7 && < 2.9
                , optparse-applicative >= 0.13 && < 0.15
                , parser-combinators >= 1.0.0
                , pretty >= 1.0 && < 1.2
                , process < 1.7
                , regex-tdfa >= 1.2
                , safe >= 0.3.9
                , split < 0.3
                , strict >= 0.3.2 && < 0.4
                , terminal-size < 0.4
                , text >= 1.2.3.1 && < 1.3
                , time >= 1.4 && < 1.9
                , transformers >= 0.5.5.0 && < 0.6
                , uniplate >=1.6 && < 1.7
                , unordered-containers >= 0.2.5.0 && < 0.3
                , utf8-string < 1.1
                , vector < 0.13
                , vector-binary-instances < 0.3
                , zip-archive > 0.2.3.5 && < 0.5
  Exposed-modules:
                  Idris.Core.Binary
                , Idris.Core.CaseTree
                , Idris.Core.Constraints
                , Idris.Core.DeepSeq
                , Idris.Core.Elaborate
                , Idris.Core.Evaluate
                , Idris.Core.Execute
                , Idris.Core.ProofState
                , Idris.Core.ProofTerm
                , Idris.Core.TT
                , Idris.Core.Typecheck
                , Idris.Core.Unify
                , Idris.Core.WHNF

                , Idris.Elab.Utils
                , Idris.Elab.Type
                , Idris.Elab.AsPat
                , Idris.Elab.Clause
                , Idris.Elab.Data
                , Idris.Elab.Record
                , Idris.Elab.Interface
                , Idris.Elab.Implementation
                , Idris.Elab.Provider
                , Idris.Elab.RunElab
                , Idris.Elab.Transform
                , Idris.Elab.Value
                , Idris.Elab.Term
                , Idris.Elab.Quasiquote
                , Idris.Elab.Rewrite

                , Idris.REPL.Browse

                , Idris.AbsSyntax
                , Idris.AbsSyntaxTree
                , Idris.Apropos
                , Idris.ASTUtils
                , Idris.CaseSplit
                , Idris.Chaser
                , Idris.Colours
                , Idris.Completion
                , Idris.Coverage
                , Idris.DSL
                , Idris.DataOpts
                , Idris.DeepSeq
                , Idris.Delaborate
                , Idris.Directives
                , Idris.Docs
                , Idris.Docstrings
                , Idris.ElabDecls
                , Idris.Erasure
                , Idris.Error
                , Idris.ErrReverse
                , Idris.Help
                , Idris.IBC
                , Idris.IdeMode
                , Idris.IdrisDoc
                , Idris.Imports
                , Idris.Info
                , Idris.Info.Show
                , Idris.Inliner
                , Idris.Interactive
                , Idris.Output
                , Idris.Main
                , Idris.ModeCommon
                , Idris.Options
                , Idris.Parser
                , Idris.Parser.Data
                , Idris.Parser.Expr
                , Idris.Parser.Helpers
                , Idris.Parser.Ops
                , Idris.Parser.Stack
                , Idris.PartialEval
                , Idris.Primitives
                , Idris.ProofSearch
                , Idris.Prover
                , Idris.Providers
                , Idris.Reflection
                , Idris.REPL
                , Idris.REPL.Parser
                , Idris.REPL.Commands
                , Idris.Termination
                , Idris.Transforms
                , Idris.TypeSearch
                , Idris.Unlit
                , Idris.WhoCalls
                , Idris.CmdOptions

                , IRTS.Bytecode
                , IRTS.CodegenC
                , IRTS.CodegenCommon
                , IRTS.CodegenJavaScript
                , IRTS.Exports
                , IRTS.JavaScript.AST
                , IRTS.JavaScript.Name
                , IRTS.JavaScript.Codegen
                , IRTS.JavaScript.LangTransforms
                , IRTS.JavaScript.Specialize
                , IRTS.JavaScript.PrimOp
                , IRTS.Compiler
                , IRTS.Defunctionalise
                , IRTS.DumpBC
                , IRTS.Inliner
                , IRTS.Lang
                , IRTS.LangOpts
                , IRTS.Portable
                , IRTS.Simplified
                , IRTS.System

                , Idris.Package
                , Idris.Package.Common
                , Idris.Package.Parser

                , Util.DynamicLinker
                , Util.ScreenSize
                , Util.System
                , Idris.IdrMain

  Other-modules:  Util.Pretty
                , Util.Net

                -- Auto Generated
                , Paths_IdrisToAgda
                , Version_IdrisToAgda
                , Tools_IdrisToAgda
                , BuildFlags_IdrisToAgda

Executable idris
  Main-is:        Idris/Main.hs
  ghc-prof-options: -auto-all -caf-all
  ghc-options: -threaded -rtsopts -funbox-strict-fields -with-rtsopts=-I0 -main-is Idris.Main.main
  hs-source-dirs: Idris-dev/src

  Build-depends:  IdrisToAgda
                , aeson >= 0.6 && < 1.5
                , annotated-wl-pprint >= 0.7 && < 0.8
                , ansi-terminal < 0.9
                , ansi-wl-pprint < 0.7
                , array >= 0.4.0.1 && < 0.6
                , async < 2.3
                , base >= 4.6 && < 5
                , base64-bytestring < 1.1
                , binary >= 0.8.4.1 && < 0.9
                , blaze-html >= 0.6.1.3 && < 0.10
                , blaze-markup >= 0.5.2.1 && < 0.9
                , bytestring >= 0.10.6.0 && < 0.11
                , cheapskate >= 0.1.1 && < 0.2
                , code-page >= 0.1 && < 0.3
                , containers >= 0.5 && < 0.7
                , data-hash >= 0.2.0.0 && < 0.3
                , deepseq >= 1.4.1.1 && < 1.5
                , directory >= 1.2.2.0 && < 1.2.3.0 || > 1.2.3.0
                , EdisonCore == 1.3.1.1 || >= 1.3.2.1 && < 1.4
                , filepath >= 1.4.0.0 && < 1.5
                , fingertree >= 0.1.4.1 && < 0.2
                , fsnotify >= 0.2 && < 2.2
                , hashable >= 1.2.1.0 && < 1.3
                , haskeline >= 0.7 && < 0.8
                , ieee754 >= 0.7.8 && < 0.9
                , megaparsec >= 7.0.4 && < 8
                , mtl >= 2.2.1 && < 2.3
                , network >= 2.7 && < 2.9
                , optparse-applicative >= 0.13 && < 0.15
                , parser-combinators >= 1.0.0
                , pretty >= 1.0 && < 1.2
                , process < 1.7
                , regex-tdfa >= 1.2
                , safe >= 0.3.9
                , split < 0.3
                , strict >= 0.3.2 && < 0.4
                , terminal-size < 0.4
                , text >= 1.2.3.1 && < 1.3
                , time >= 1.4 && < 1.9
                , transformers >= 0.5.5.0 && < 0.6
                , uniplate >=1.6 && < 1.7
                , unordered-containers >= 0.2.5.0 && < 0.3
                , utf8-string < 1.1
                , vector < 0.13
                , vector-binary-instances < 0.3
                , zip-archive > 0.2.3.5 && < 0.5
  build-tools:  happy >= 1.15 && < 2,
                alex >= 3.0 && < 4

  Default-Language: Haskell2010
  default-extensions: CPP
                    DoAndIfThenElse
                    MultiParamTypeClasses
                    TypeSynonymInstances
                    FlexibleInstances
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    NoMonomorphismRestriction
                    PatternGuards
                    TupleSections
                    NamedFieldPuns
                    ConstraintKinds
                    DataKinds
                    DefaultSignatures
                    DeriveFoldable
                    DeriveFunctor
                    DeriveTraversable
                    ExistentialQuantification
                    FlexibleContexts
                    FlexibleInstances
                    FunctionalDependencies
                    LambdaCase
                    MultiParamTypeClasses
                    MultiWayIf
                    NamedFieldPuns
                    RankNTypes
                    RecordWildCards
                    ScopedTypeVariables
                    StandaloneDeriving
                    TypeSynonymInstances
                    TupleSections
  Other-modules: IRTS.Bytecode
                 IRTS.CodegenC
                 IRTS.CodegenCommon
                 IRTS.Compiler
                 IRTS.Defunctionalise
                 IRTS.DumpBC
                 IRTS.Exports
                 IRTS.Inliner
                 IRTS.Lang
                 IRTS.LangOpts
                 IRTS.Portable
                 IRTS.Simplified
                 IRTS.System
                 Idris.ASTUtils
                 Idris.AbsSyntax
                 Idris.AbsSyntaxTree
                 Idris.Apropos
                 Idris.CaseSplit
                 Idris.Chaser
                 Idris.Colours
                 Idris.Completion
                 Idris.Core.Binary
                 Idris.Core.CaseTree
                 Idris.Core.Constraints
                 Idris.Core.DeepSeq
                 Idris.Core.Elaborate
                 Idris.Core.Evaluate
                 Idris.Core.Execute
                 Idris.Core.ProofState
                 Idris.Core.ProofTerm
                 Idris.Core.TT
                 Idris.Core.Typecheck
                 Idris.Core.Unify
                 Idris.Core.WHNF
                 Idris.Coverage
                 Idris.DSL
                 Idris.DataOpts
                 Idris.DeepSeq
                 Idris.Delaborate
                 Idris.Directives
                 Idris.Docs
                 Idris.Docstrings
                 Idris.Elab.AsPat
                 Idris.Elab.Clause
                 Idris.Elab.Data
                 Idris.Elab.Implementation
                 Idris.Elab.Interface
                 Idris.Elab.Provider
                 Idris.Elab.Quasiquote
                 Idris.Elab.Record
                 Idris.Elab.Rewrite
                 Idris.Elab.RunElab
                 Idris.Elab.Term
                 Idris.Elab.Transform
                 Idris.Elab.Type
                 Idris.Elab.Utils
                 Idris.Elab.Value
                 Idris.ElabDecls
                 Idris.Erasure
                 Idris.ErrReverse
                 Idris.Error
                 Idris.Help
                 Idris.IBC
                 Idris.IdeMode
                 Idris.IdrisDoc
                 Idris.Imports
                 Idris.Info
                 Idris.Inliner
                 Idris.Interactive
                 Idris.ModeCommon
                 Idris.Options
                 Idris.Output
                 Idris.Parser
                 Idris.Parser.Data
                 Idris.Parser.Expr
                 Idris.Parser.Helpers
                 Idris.Parser.Ops
                 Idris.Parser.Stack
                 Idris.PartialEval
                 Idris.Primitives
                 Idris.ProofSearch
                 Idris.Prover
                 Idris.Providers
                 Idris.REPL
                 Idris.REPL.Browse
                 Idris.REPL.Commands
                 Idris.REPL.Parser
                 Idris.Reflection
                 Idris.Termination
                 Idris.Transforms
                 Idris.TypeSearch
                 Idris.Unlit
                 Idris.WhoCalls
                 Idris.CmdOptions
                 Idris.IdrMain
                 Idris.Info.Show
                 Idris.Package
                 Idris.Package.Common
                 Idris.Package.Parser

                 Util.DynamicLinker
                 Util.ScreenSize
                 Util.System

                 Util.Pretty
                 Util.Net

                 -- Auto Generated
                 Paths_IdrisToAgda
                 Version_IdrisToAgda
                 Tools_IdrisToAgda
                 BuildFlags_IdrisToAgda


executable ita
  hs-source-dirs: src, agda/src/full, Idris-dev/src
  build-depends:  aeson >= 0.6 && < 1.5
                , annotated-wl-pprint >= 0.7 && < 0.8
                , ansi-terminal < 0.9
                , ansi-wl-pprint < 0.7
                , array >= 0.4.0.1 && < 0.6
                , async < 2.3
                , base >= 4.6 && < 5
                , base64-bytestring < 1.1
                , binary >= 0.8.4.1 && < 0.9
                , blaze-html >= 0.6.1.3 && < 0.10
                , blaze-markup >= 0.5.2.1 && < 0.9
                , bytestring >= 0.10.6.0 && < 0.11
                , cheapskate >= 0.1.1 && < 0.2
                , code-page >= 0.1 && < 0.3
                , containers >= 0.5 && < 0.7
                , data-hash >= 0.2.0.0 && < 0.3
                , deepseq >= 1.4.1.1 && < 1.5
                , directory >= 1.2.2.0 && < 1.2.3.0 || > 1.2.3.0
                , EdisonCore == 1.3.1.1 || >= 1.3.2.1 && < 1.4
                , filepath >= 1.4.0.0 && < 1.5
                , fingertree >= 0.1.4.1 && < 0.2
                , fsnotify >= 0.2 && < 2.2
                , hashable >= 1.2.1.0 && < 1.3
                , haskeline >= 0.7 && < 0.8
                , ieee754 >= 0.7.8 && < 0.9
                , megaparsec >= 7.0.4 && < 8
                , mtl >= 2.2.1 && < 2.3
                , network >= 2.7 && < 2.9
                , optparse-applicative >= 0.13 && < 0.15
                , parser-combinators >= 1.0.0
                , pretty >= 1.0 && < 1.2
                , process < 1.7
                , regex-tdfa >= 1.2
                , safe >= 0.3.9
                , split < 0.3
                , strict >= 0.3.2 && < 0.4
                , terminal-size < 0.4
                , text >= 1.2.3.1 && < 1.3
                , time >= 1.4 && < 1.9
                , transformers >= 0.5.5.0 && < 0.6
                , uniplate >=1.6 && < 1.7
                , unordered-containers >= 0.2.5.0 && < 0.3
                , utf8-string < 1.1
                , vector < 0.13
                , vector-binary-instances < 0.3
                , zip-archive > 0.2.3.5 && < 0.5
  build-tools:  happy >= 1.15 && < 2,
                alex >= 3.0 && < 4
  default-language: Haskell98
  default-extensions: CPP
                    DoAndIfThenElse
                    MultiParamTypeClasses
                    TypeSynonymInstances
                    FlexibleInstances
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    NoMonomorphismRestriction
                    PatternGuards
                    TupleSections
                    NamedFieldPuns
                    ConstraintKinds
                    DataKinds
                    DefaultSignatures
                    DeriveFoldable
                    DeriveFunctor
                    DeriveTraversable
                    ExistentialQuantification
                    FlexibleContexts
                    FlexibleInstances
                    FunctionalDependencies
                    LambdaCase
                    MultiParamTypeClasses
                    MultiWayIf
                    NamedFieldPuns
                    OverloadedStrings
                    RankNTypes
                    RecordWildCards
                    ScopedTypeVariables
                    StandaloneDeriving
                    TypeSynonymInstances
                    TupleSections
  main-is:          Main.hs
  other-modules: Agda.Syntax.Abstract.Name
                 Agda.Syntax.Common
                 Agda.Syntax.Concrete
                 Agda.Syntax.Concrete.Name
                 Agda.Syntax.Concrete.Pretty
                 Agda.Syntax.Fixity
                 Agda.Syntax.Literal
                 Agda.Syntax.Notation
                 Agda.Syntax.Position
                 Agda.Utils.Bag
                 Agda.Utils.Either
                 Agda.Utils.Except
                 Agda.Utils.FileName
                 Agda.Utils.Function
                 Agda.Utils.Functor
                 Agda.Utils.Impossible
                 Agda.Utils.Lens
                 Agda.Utils.List
                 Agda.Utils.Maybe
                 Agda.Utils.Maybe.Strict
                 Agda.Utils.Monad
                 Agda.Utils.NonemptyList
                 Agda.Utils.Null
                 Agda.Utils.POMonoid
                 Agda.Utils.PartialOrd
                 Agda.Utils.Pretty
                 Agda.Utils.Size
                 Agda.Utils.Suffix
                 Agda.Utils.Tuple
                 Agda.Utils.Graph.AdjacencyMap.Unidirectional
                 Agda.Utils.SemiRing
                 Agda.Utils.Singleton
                 Agda.Utils.String
                 Agda.TypeChecking.Positivity.Occurrence
                 Agda.Interaction.Options.IORefs
                 Util.Pretty
                 Util.Net
                 IRTS.CodegenCommon
                 IRTS.Defunctionalise
                 IRTS.Lang
                 IRTS.Simplified
                 IRTS.System
                 Idris.ASTUtils
                 Idris.AbsSyntax
                 Idris.AbsSyntaxTree
                 Idris.Colours
                 Idris.Core.Binary
                 Idris.Core.CaseTree
                 Idris.Core.Constraints
                 Idris.Core.DeepSeq
                 Idris.Core.Elaborate
                 Idris.Core.Evaluate
                 Idris.Core.Execute
                 Idris.Core.ProofState
                 Idris.Core.ProofTerm
                 Idris.Core.TT
                 Idris.Core.Typecheck
                 Idris.Core.Unify
                 Idris.Core.WHNF
                 Idris.Coverage
                 Idris.DSL
                 Idris.DataOpts
                 Idris.DeepSeq
                 Idris.Delaborate
                 Idris.Directives
                 Idris.Docstrings
                 Idris.Elab.AsPat
                 Idris.Elab.Clause
                 Idris.Elab.Data
                 Idris.Elab.Implementation
                 Idris.Elab.Interface
                 Idris.Elab.Provider
                 Idris.Elab.Quasiquote
                 Idris.Elab.Record
                 Idris.Elab.Rewrite
                 Idris.Elab.RunElab
                 Idris.Elab.Term
                 Idris.Elab.Transform
                 Idris.Elab.Type
                 Idris.Elab.Utils
                 Idris.Elab.Value
                 Idris.ElabDecls
                 Idris.ErrReverse
                 Idris.Error
                 Idris.IBC
                 Idris.IdeMode
                 Idris.Imports
                 Idris.Options
                 Idris.Output
                 Idris.Parser
                 Idris.Parser.Data
                 Idris.Parser.Expr
                 Idris.Parser.Helpers
                 Idris.Parser.Ops
                 Idris.Parser.Stack
                 Idris.PartialEval
                 Idris.Primitives
                 Idris.ProofSearch
                 Idris.Providers
                 Idris.Reflection
                 Idris.Termination
                 Idris.Transforms
                 Idris.Unlit
                 Util.DynamicLinker
                 Util.ScreenSize
                 Util.System

                -- Auto Generated
                , Paths_IdrisToAgda
                , Version_IdrisToAgda
                , Tools_IdrisToAgda
                , BuildFlags_IdrisToAgda


executable sts
  main-is:          Stats.hs
  ghc-options:    -main-is Stats
  hs-source-dirs: src, agda/src/full, Idris-dev/src
  build-depends:  aeson >= 0.6 && < 1.5
                , annotated-wl-pprint >= 0.7 && < 0.8
                , ansi-terminal < 0.9
                , ansi-wl-pprint < 0.7
                , array >= 0.4.0.1 && < 0.6
                , async < 2.3
                , base >= 4.6 && < 5
                , base64-bytestring < 1.1
                , binary >= 0.8.4.1 && < 0.9
                , blaze-html >= 0.6.1.3 && < 0.10
                , blaze-markup >= 0.5.2.1 && < 0.9
                , bytestring >= 0.10.6.0 && < 0.11
                , cheapskate >= 0.1.1 && < 0.2
                , code-page >= 0.1 && < 0.3
                , containers >= 0.5 && < 0.7
                , data-hash >= 0.2.0.0 && < 0.3
                , deepseq >= 1.4.1.1 && < 1.5
                , directory >= 1.2.2.0 && < 1.2.3.0 || > 1.2.3.0
                , EdisonCore == 1.3.1.1 || >= 1.3.2.1 && < 1.4
                , filepath >= 1.4.0.0 && < 1.5
                , fingertree >= 0.1.4.1 && < 0.2
                , fsnotify >= 0.2 && < 2.2
                , hashable >= 1.2.1.0 && < 1.3
                , haskeline >= 0.7 && < 0.8
                , ieee754 >= 0.7.8 && < 0.9
                , megaparsec >= 7.0.4 && < 8
                , mtl >= 2.2.1 && < 2.3
                , network >= 2.7 && < 2.9
                , optparse-applicative >= 0.13 && < 0.15
                , parser-combinators >= 1.0.0
                , pretty >= 1.0 && < 1.2
                , process < 1.7
                , regex-tdfa >= 1.2
                , safe >= 0.3.9
                , split < 0.3
                , strict >= 0.3.2 && < 0.4
                , terminal-size < 0.4
                , text >= 1.2.3.1 && < 1.3
                , time >= 1.4 && < 1.9
                , transformers >= 0.5.5.0 && < 0.6
                , uniplate >=1.6 && < 1.7
                , unordered-containers >= 0.2.5.0 && < 0.3
                , utf8-string < 1.1
                , vector < 0.13
                , vector-binary-instances < 0.3
                , zip-archive > 0.2.3.5 && < 0.5
  build-tools:  happy >= 1.15 && < 2,
                alex >= 3.0 && < 4
  default-language: Haskell98
  default-extensions: CPP
                    DeriveDataTypeable
                    DoAndIfThenElse
                    MultiParamTypeClasses
                    TypeSynonymInstances
                    FlexibleInstances
                    FlexibleContexts
                    GeneralizedNewtypeDeriving
                    NoMonomorphismRestriction
                    PatternGuards
                    TupleSections
                    NamedFieldPuns
                    ConstraintKinds
                    DataKinds
                    DefaultSignatures
                    DeriveFoldable
                    DeriveFunctor
                    DeriveTraversable
                    ExistentialQuantification
                    FlexibleContexts
                    FlexibleInstances
                    FunctionalDependencies
                    LambdaCase
                    MultiParamTypeClasses
                    MultiWayIf
                    NamedFieldPuns
                    OverloadedStrings
                    RankNTypes
                    RecordWildCards
                    ScopedTypeVariables
                    StandaloneDeriving
                    TypeSynonymInstances
                    TupleSections
  other-modules: Agda.Syntax.Abstract.Name
                 Agda.Syntax.Common
                 Agda.Syntax.Concrete
                 Agda.Syntax.Concrete.Name
                 Agda.Syntax.Concrete.Pretty
                 Agda.Syntax.Fixity
                 Agda.Syntax.Literal
                 Agda.Syntax.Notation
                 Agda.Syntax.Position
                 Agda.Utils.Bag
                 Agda.Utils.Either
                 Agda.Utils.Except
                 Agda.Utils.FileName
                 Agda.Utils.Function
                 Agda.Utils.Functor
                 Agda.Utils.Impossible
                 Agda.Utils.Lens
                 Agda.Utils.List
                 Agda.Utils.Maybe
                 Agda.Utils.Maybe.Strict
                 Agda.Utils.Monad
                 Agda.Utils.NonemptyList
                 Agda.Utils.Null
                 Agda.Utils.POMonoid
                 Agda.Utils.PartialOrd
                 Agda.Utils.Pretty
                 Agda.Utils.Size
                 Agda.Utils.Suffix
                 Agda.Utils.Tuple
                 Agda.Utils.Graph.AdjacencyMap.Unidirectional
                 Agda.Utils.SemiRing
                 Agda.Utils.Singleton
                 Agda.Utils.String
                 Agda.TypeChecking.Positivity.Occurrence
                 Agda.Interaction.Options.IORefs
                 Util.Pretty
                 Util.Net
                 IRTS.CodegenCommon
                 IRTS.Defunctionalise
                 IRTS.Lang
                 IRTS.Simplified
                 IRTS.System
                 Idris.ASTUtils
                 Idris.AbsSyntax
                 Idris.AbsSyntaxTree
                 Idris.Colours
                 Idris.Core.Binary
                 Idris.Core.CaseTree
                 Idris.Core.Constraints
                 Idris.Core.DeepSeq
                 Idris.Core.Elaborate
                 Idris.Core.Evaluate
                 Idris.Core.Execute
                 Idris.Core.ProofState
                 Idris.Core.ProofTerm
                 Idris.Core.TT
                 Idris.Core.Typecheck
                 Idris.Core.Unify
                 Idris.Core.WHNF
                 Idris.Coverage
                 Idris.DSL
                 Idris.DataOpts
                 Idris.DeepSeq
                 Idris.Delaborate
                 Idris.Directives
                 Idris.Docstrings
                 Idris.Elab.AsPat
                 Idris.Elab.Clause
                 Idris.Elab.Data
                 Idris.Elab.Implementation
                 Idris.Elab.Interface
                 Idris.Elab.Provider
                 Idris.Elab.Quasiquote
                 Idris.Elab.Record
                 Idris.Elab.Rewrite
                 Idris.Elab.RunElab
                 Idris.Elab.Term
                 Idris.Elab.Transform
                 Idris.Elab.Type
                 Idris.Elab.Utils
                 Idris.Elab.Value
                 Idris.ElabDecls
                 Idris.ErrReverse
                 Idris.Error
                 Idris.IBC
                 Idris.IdeMode
                 Idris.Imports
                 Idris.Options
                 Idris.Output
                 Idris.Parser
                 Idris.Parser.Data
                 Idris.Parser.Expr
                 Idris.Parser.Helpers
                 Idris.Parser.Ops
                 Idris.Parser.Stack
                 Idris.PartialEval
                 Idris.Primitives
                 Idris.ProofSearch
                 Idris.Providers
                 Idris.Reflection
                 Idris.Termination
                 Idris.Transforms
                 Idris.Unlit
                 Util.DynamicLinker
                 Util.ScreenSize
                 Util.System

                -- Auto Generated
                , Paths_IdrisToAgda
                , Version_IdrisToAgda
                , Tools_IdrisToAgda
                , BuildFlags_IdrisToAgda


